Fixed button problems
- some buttons had #222 background on a #22 background and where thereby invisible, changed btn background to #FFF2
- primary buttons were only defined in certain places, they got generalized now.
- primary buttons looked a little dull, so they got more saturated colors

--- a/Darklearning.user.css
+++ b/Darklearning.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Darklearning
 @namespace      github.com/openstyles/stylus
-@version        1.1.2
+@version        1.1.3
 @description    Darker version of Elearning
 @author         Riedler
 @preprocessor uso
@@ -240,13 +240,18 @@ a:hover,a>span:hover{
 .pagination>.page-item>a:hover{
     background-color:#555;}
 .btn-secondary{
-    background-color:#222;
+    background-color:#FFF2;
     color:#AAA;
     border:none;}
 .btn-secondary:hover{
-    background-color:#444;
+    background-color:#FFF4;
     color:#BBB;
     border-color:#888;}
+.btn-primary{
+    color:#CCC;
+    background-color:#079;}
+.btn-primary:hover{
+    background-color:#09c;}
 .preference-state-status-container>span.on-text,
 .preference-state-status-container>span.off-text{
     color:#151515 !important;}
@@ -567,11 +572,6 @@ img[src$="elearning.tgm.ac.at/theme/image.php/classic/core/"][src$="/i/loading_s
 #login_username,#login_password{
     background-color:#333 !important;
     color:#AAA !important;}
-.btn-primary{
-    color:#CCC;
-    background-color:#418BA4;}
-.btn-primary:hover{
-    background-color:#6AC;}
 .forumpost{
     border-color:#888 !important;
     border-radius:0.5em;}
@@ -584,11 +584,6 @@ img[src$="elearning.tgm.ac.at/theme/image.php/classic/core/"][src$="/i/loading_s
     color:#AAA;}
 img.img-fluid{
     filter:invert(1) hue-rotate(180deg) brightness(0.9);}
-.btn-primary{
-    color:#CCC;
-    background-color:#418BA4;}
-.btn-primary:hover{
-    background-color:#6AC;}
 
 #modal-content{background-color:#222;}
 #modal-header{border-bottom:none;}
